Added missing files and updated README.